@@ -1,0 +1,2 @@
+<http://example.org/s> <http://example.org/p> <http://example.org/falseish#o> .
+<http://example.org/s> <http://example.org/p> <http://example.org/trueish#o> .
