@@ -3,10 +3,11 @@ serd (0.32.5) unstable; urgency=medium
   * Fix handling of some invalid EOF cases in lax mode
   * Fix invalid characters in error messages
   * Fix reading numbers with no space before the final dot
+  * Fix reading prefix names that start with "true." or "false."
   * Refuse to write incoherent statements
   * Remove project and version number from man page OS field
 
- -- David Robillard <d@drobilla.net>  Tue, 25 Feb 2025 14:55:48 +0000
+ -- David Robillard <d@drobilla.net>  Tue, 25 Feb 2025 22:59:32 +0000
 
 serd (0.32.4) stable; urgency=medium
 
